--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ProductPricesFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.fragments.ProductPricesFragment">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -11,8 +12,12 @@
         android:id="@+id/products_fragment_recyclerview"/>
 
 
-    <Button
-        android:text="ADD"
+    <android.support.design.widget.FloatingActionButton
+        android:layout_margin="10dp"
+        app:fabSize="auto"
+        android:scaleType="center"
+        android:src="@drawable/ic_new"
+        app:backgroundTint="@color/greyLighterBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
