--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="greyLightBackground">#e5e5e5</color>
     <color name="greyLighterBackground">#f1f1f1</color>
+    <color name="colorBackground">#f4f4f4</color>
 </resources>
