--- a/app/src/main/res/layout/cell_product_recycler.xml
+++ b/app/src/main/res/layout/cell_product_recycler.xml
@@ -16,10 +16,69 @@
         >
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/cell_product_recycler_textview_name"
+            android:maxLines="1"
+            android:lines="1"
+            android:ellipsize="end"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/cell_product_recycler_textview_name"/>
+            android:fontFamily="@font/open_sans"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
 
+
+        <TextView
+            android:id="@+id/cell_product_recycler_textview_description"
+            android:maxLines="2"
+            android:lines="2"
+            android:ellipsize="end"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_semibold"
+            android:textSize="15sp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_name"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+
+
+        <TextView
+            android:id="@+id/cell_product_recycler_textview_buy_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:textSize="25sp"
+            android:gravity="bottom|left"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/open_sans_semibold"
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+
+        <TextView
+            android:id="@+id/cell_product_recycler_textview_sell_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:textSize="25sp"
+            android:gravity="bottom|left"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/open_sans_semibold"
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_buy_price"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
