--- a/app/src/main/res/layout/cell_product_recycler.xml
+++ b/app/src/main/res/layout/cell_product_recycler.xml
@@ -1,84 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
     android:layout_marginTop="5dp"
+    android:layout_marginRight="10dp"
     android:layout_marginBottom="5dp"
-    app:cardUseCompatPadding="false"
     app:cardElevation="2dp"
-    android:layout_height="wrap_content">
+    app:cardUseCompatPadding="false">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline_h_50"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
         <TextView
             android:id="@+id/cell_product_recycler_textview_name"
-            android:maxLines="1"
-            android:lines="1"
-            android:ellipsize="end"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:ellipsize="end"
             android:fontFamily="@font/open_sans"
+            android:lines="1"
+            android:maxLines="1"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_margin="10dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/cell_product_recycler_textview_description"
-            android:maxLines="2"
-            android:lines="2"
-            android:ellipsize="end"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans_semibold"
-            android:textSize="15sp"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
-            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_name"
+            android:ellipsize="end"
+            android:fontFamily="@font/open_sans_semibold"
+            android:lines="2"
+            android:maxLines="2"
+            android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            />
-
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_name" />
 
 
         <TextView
+            android:paddingTop="5dp"
+            android:id="@+id/cell_product_recycler_textview_cost"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@color/greyLightBackground"
+            android:text="costo"
+            android:textSize="12dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/guideline_h_50"
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description" />
+
+        <TextView
+            android:textSize="12dp"
+            android:paddingTop="5dp"
+            android:id="@+id/cell_product_recycler_textview_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:background="@color/greyLightBackground"
+            android:text="precio"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toRightOf="@id/guideline_h_50"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description" />
+
+        <TextView
+            android:background="@color/greyLightBackground"
             android:id="@+id/cell_product_recycler_textview_buy_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_semibold"
+            android:gravity="bottom|center"
             android:textColor="@color/colorPrimary"
             android:textSize="25sp"
-            android:gravity="bottom|left"
-            android:layout_margin="10dp"
-            android:fontFamily="@font/open_sans_semibold"
-            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintRight_toLeftOf="@id/guideline_h_50"
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_cost" />
 
 
         <TextView
+            android:background="@color/greyLightBackground"
             android:id="@+id/cell_product_recycler_textview_sell_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_semibold"
+            android:gravity="bottom|center"
             android:textColor="@color/colorPrimary"
             android:textSize="25sp"
-            android:gravity="bottom|left"
-            android:layout_margin="10dp"
-            android:fontFamily="@font/open_sans_semibold"
-            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_buy_price"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/guideline_h_50"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_price" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
