--- a/app/src/main/res/layout/cell_product_recycler.xml
+++ b/app/src/main/res/layout/cell_product_recycler.xml
@@ -25,13 +25,15 @@
             android:id="@+id/cell_product_recycler_textview_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
             android:ellipsize="end"
-            android:fontFamily="@font/open_sans"
+            android:fontFamily="@font/baloo"
             android:lines="1"
             android:maxLines="1"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:text="Titulo del producto"
+            android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,71 +44,105 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             android:ellipsize="end"
-            android:fontFamily="@font/open_sans_semibold"
+            android:fontFamily="@font/montserrat"
             android:lines="2"
             android:maxLines="2"
+            android:text="descripcion del producto aqui"
             android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_name" />
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description"
+            app:layout_constraintBottom_toTopOf="@id/cell_product_recycler_frame_background"
+            android:background="@color/greyLighterBackground"/>
+<FrameLayout
+    android:id="@+id/cell_product_recycler_frame_background"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:background="@android:color/white"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description"/>
 
         <TextView
-            android:paddingTop="5dp"
             android:id="@+id/cell_product_recycler_textview_cost"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
             android:background="@color/greyLightBackground"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center"
+            android:padding="5dp"
             android:text="costo"
-            android:textSize="12dp"
             android:textAllCaps="true"
-            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:textSize="11dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/guideline_h_50"
             app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description" />
 
         <TextView
-            android:textSize="12dp"
-            android:paddingTop="5dp"
             android:id="@+id/cell_product_recycler_textview_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textAllCaps="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="4dp"
             android:background="@color/greyLightBackground"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center"
+            android:padding="5dp"
             android:text="precio"
-            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="11dp"
             app:layout_constraintLeft_toRightOf="@id/guideline_h_50"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_description" />
 
         <TextView
-            android:background="@color/greyLightBackground"
             android:id="@+id/cell_product_recycler_textview_buy_price"
+            style="@style/textview_cell_product_prices"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans_semibold"
+            android:layout_marginBottom="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
+            android:background="@color/greyLighterBackground"
             android:gravity="bottom|center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="25sp"
+            android:padding="3dp"
+            android:text="$550"
+            app:layout_constraintBottom_toBottomOf="@id/cell_product_recycler_frame_background"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/guideline_h_50"
             app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_cost" />
 
 
         <TextView
-            android:background="@color/greyLightBackground"
             android:id="@+id/cell_product_recycler_textview_sell_price"
+            style="@style/textview_cell_product_prices"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans_semibold"
+            android:layout_marginBottom="4dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="4dp"
+            android:background="@color/greyLighterBackground"
             android:gravity="bottom|center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="25sp"
+            android:padding="3dp"
+            android:text="$620"
+            app:layout_constraintBottom_toBottomOf="@id/cell_product_recycler_frame_background"
             app:layout_constraintLeft_toLeftOf="@id/guideline_h_50"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cell_product_recycler_textview_price" />
