--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,10 @@
         <item name="android:windowBackground">@color/colorBackground</item>
     </style>
 
+    <style name="textview_cell_product_prices">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:fontFamily">@font/baloo</item>
+    </style>
+
 </resources>
