--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -1,14 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.fragments.ContactDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/fragment_contact_detail_guide_30_h"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/fragment_contact_detail_guide_70_v"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.7" />
+
+    <ImageView
+
+        android:id="@+id/fragment_contact_detail_imageview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@id/fragment_contact_detail_guide_30_h"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/fragment_contact_detail_name"
+        style="@style/textview_generic_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintTop_toTopOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintVertical_chainStyle="spread" />
+
+    <TextView
+        android:id="@+id/fragment_contact_detail_phone"
+        style="@style/textview_generic_subtitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintRight_toLeftOf="@id/fragment_contact_detail_guide_70_v"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_name" />
+
+    <TextView
+        android:id="@+id/fragment_contact_detail_address"
+        style="@style/textview_generic_subtitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_phone" />
+
+    <TextView
+        android:id="@+id/fragment_contact_detail_description"
+        style="@style/textview_generic_subtitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_contact_detail_recyclerview_orders"
+        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_address" />
+
+    <ImageButton
+        android:id="@+id/fragment_contact_detail_button_whatsapp"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="center"
+        android:src="@drawable/ic_whatsapp_logo"
+        android:text="whatsapp"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_contact_detail_phone"
+        app:layout_constraintLeft_toRightOf="@id/fragment_contact_detail_guide_70_v"
+        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
+        app:layout_constraintTop_toTopOf="@id/fragment_contact_detail_phone"
+
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_contact_detail_recyclerview_orders"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_imageview" />
+</android.support.constraint.ConstraintLayout>
