--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/bottom_nav_button_buy" android:icon="@drawable/ic_buy" android:title="@string/seccion_compras"/>
-<item android:id="@+id/bottom_nav_button_orders" android:icon="@drawable/ic_orders" android:title="@string/seccion_pedidos"/>
-    <item android:id="@+id/bottom_nav_button_price" android:icon="@drawable/ic_price" android:title="@string/seccion_precios"/>
 
+    <item android:id="@+id/bottom_nav_button_contacts" android:icon="@drawable/ic_person_outline_black_24dp" android:title="@string/seccion_contactos"/>
+    <item android:id="@+id/bottom_nav_button_price" android:icon="@drawable/ic_price" android:title="@string/seccion_precios"/>
+    <item android:id="@+id/bottom_nav_button_buy" android:icon="@drawable/ic_buy" android:title="@string/seccion_compras"/>
+    <item android:id="@+id/bottom_nav_button_orders" android:icon="@drawable/ic_orders" android:title="@string/seccion_pedidos"/>
 </menu>
