--- a/app/src/main/res/layout/cell_contact_recycler.xml
+++ b/app/src/main/res/layout/cell_contact_recycler.xml
@@ -1,10 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/cell_contact_recycler_guide_v_20"
+        app:layout_constraintGuide_percent="0.20"/>
+
+    <ImageView
+        android:layout_margin="5dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/cell_contact_recycler_guide_v_20"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:src="@drawable/circle_bg"
+        android:id="@+id/cell_contact_recycler_imageview_bg"/>
 
     <TextView
-        android:layout_width="match_parent"
+        style="@style/textview_generic_title"
+        app:layout_constraintLeft_toLeftOf="@id/cell_contact_recycler_imageview_bg"
+        app:layout_constraintRight_toRightOf="@id/cell_contact_recycler_imageview_bg"
+        app:layout_constraintTop_toTopOf="@id/cell_contact_recycler_imageview_bg"
+        app:layout_constraintBottom_toBottomOf="@id/cell_contact_recycler_imageview_bg"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        android:id="@+id/cell_contact_recycler_textview_initial"
+        android:textColor="@android:color/white"
+        />
+
+    <TextView style="@style/textview_generic_subtitle"
+        app:layout_constraintLeft_toRightOf="@id/cell_contact_recycler_guide_v_20"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="22dp"
         android:id="@+id/cell_contact_recycler_textview_name"/>
