--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -70,7 +70,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/fragment_contact_detail_recyclerview_orders"
         app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
         app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
@@ -91,12 +90,31 @@
 
         />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:fabSize="auto"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="10dp"
+        android:id="@+id/fragment_contact_detail_add_order"
+        />
+    <TextView style="@style/textview_generic_subtitle"
+        android:layout_width="0dp"
+        android:text="@string/orders"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/fragment_contact_detail_order_title"
+        app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_description"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_contact_detail_recyclerview_orders"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_imageview" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_order_title" />
 </android.support.constraint.ConstraintLayout>
