--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -1,120 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:fitsSystemWindows="true"
+android:layout_height="match_parent"
+>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.AppBarLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/appbar_layout">
+    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+
+    <android.support.design.widget.CollapsingToolbarLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/collapsing_toolbar"
+        app:contentScrim="?attr/colorAccent"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed"
+        >
+
+        <ImageView
+            android:id="@+id/fragment_contact_detail_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:layout_collapseMode="parallax" />
+
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorBackground"
+            app:titleTextColor="@android:color/black"
+            app:layout_collapseMode="pin" />
+    </android.support.design.widget.CollapsingToolbarLayout>
+</android.support.design.widget.AppBarLayout>
+
+<android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.ContactDetailFragment">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-    <android.support.constraint.Guideline
-        android:id="@+id/fragment_contact_detail_guide_30_h"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        android:layout_height="match_parent">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/fragment_contact_detail_guide_70_v"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7" />
 
-    <ImageView
+        <android.support.constraint.Guideline
+            android:id="@+id/fragment_contact_detail_guide_30_h"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.3" />
 
-        android:id="@+id/fragment_contact_detail_imageview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="@id/fragment_contact_detail_guide_30_h"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <android.support.constraint.Guideline
+            android:id="@+id/fragment_contact_detail_guide_70_v"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.7" />
 
-    <TextView
-        android:id="@+id/fragment_contact_detail_name"
-        style="@style/textview_generic_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintTop_toTopOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintVertical_chainStyle="spread" />
+        <TextView
+            android:id="@+id/fragment_contact_detail_phone"
+            style="@style/textview_generic_subtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/fragment_contact_detail_phone"
-        style="@style/textview_generic_subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintRight_toLeftOf="@id/fragment_contact_detail_guide_70_v"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_name" />
+        <TextView
+            android:id="@+id/fragment_contact_detail_address"
+            style="@style/textview_generic_subtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_phone" />
 
-    <TextView
-        android:id="@+id/fragment_contact_detail_address"
-        style="@style/textview_generic_subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_phone" />
+        <TextView
+            android:id="@+id/fragment_contact_detail_description"
+            style="@style/textview_generic_subtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_address" />
 
-    <TextView
-        android:id="@+id/fragment_contact_detail_description"
-        style="@style/textview_generic_subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_contact_detail_recyclerview_orders"
-        app:layout_constraintLeft_toLeftOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_contact_detail_address" />
+        <ImageButton
+            android:id="@+id/fragment_contact_detail_button_add_order"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="center"
+            android:src="@drawable/ic_new"
+            android:text="whatsapp"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_contact_detail_order_title"
+            app:layout_constraintLeft_toRightOf="@id/fragment_contact_detail_guide_70_v"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/fragment_contact_detail_order_title"
 
-    <ImageButton
-        android:id="@+id/fragment_contact_detail_button_whatsapp"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_whatsapp_logo"
-        android:text="whatsapp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_contact_detail_phone"
-        app:layout_constraintLeft_toRightOf="@id/fragment_contact_detail_guide_70_v"
-        app:layout_constraintRight_toRightOf="@id/fragment_contact_detail_imageview"
-        app:layout_constraintTop_toTopOf="@id/fragment_contact_detail_phone"
+            />
 
-        />
+        <TextView style="@style/textview_generic_subtitle"
+            android:layout_width="0dp"
+            android:text="@string/orders"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/fragment_contact_detail_order_title"
+            app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_description"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_contact_detail_recyclerview_orders"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_order_title" />
+    </android.support.constraint.ConstraintLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:fabSize="auto"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="10dp"
-        android:id="@+id/fragment_contact_detail_add_order"
-        />
-    <TextView style="@style/textview_generic_subtitle"
-        android:layout_width="0dp"
-        android:text="@string/orders"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/fragment_contact_detail_order_title"
-        app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_description"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_contact_detail_recyclerview_orders"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_contact_detail_order_title" />
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
+
+
+<android.support.design.widget.FloatingActionButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:fabSize="auto"
+    app:layout_anchor="@id/appbar_layout"
+    android:layout_marginEnd="20dp"
+    app:layout_anchorGravity="bottom|right|end"
+    android:id="@+id/fragment_contact_detail_button_whatsapp"
+    android:src="@drawable/ic_whatsapp_logo"
+    app:backgroundTint="@color/greyLighterBackground"
+    />
+
+
+
+</android.support.design.widget.CoordinatorLayout>
