--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         app:menu="@menu/bottom_nav_menu"
         android:id="@+id/bottom_navigation_main"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_container_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
