--- a/app/src/main/res/layout/fragment_add_order.xml
+++ b/app/src/main/res/layout/fragment_add_order.xml
@@ -29,5 +29,21 @@
         android:text="Add"
         android:id="@+id/fragment_add_order_button_add"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Or add to existing order"/>
+
+    <Spinner
+        android:id="@+id/fragment_add_order_spinner_existing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/fragment_add_order_button_add_to_existing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add"/>
+
 
 </LinearLayout>
