--- a/app/src/main/res/layout/cell_order_container_recycler.xml
+++ b/app/src/main/res/layout/cell_order_container_recycler.xml
@@ -1,34 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    app:cardUseCompatPadding="false"
+    app:cardElevation="2dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.constraint.ConstraintLayout
+    android:padding="10dp"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp">
+    >
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.7"
+        android:id="@+id/guideline_v_70"/>
 
     <TextView style="@style/textview_generic_title"
-        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/guideline_v_70"
         android:id="@+id/cell_order_container_order_name"
         />
 
     <TextView style="@style/textview_generic_subtitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:gravity="right"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/guideline_v_70"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content"
         android:id="@+id/cell_order_container_order_date"
         />
 
     <android.support.v7.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="@id/cell_order_container_order_name"
         android:id="@+id/cell_order_container_order_recycler_products"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content"/>
-    <TextView
-        style="@style/textview_generic_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cell_order_container_order_total"/>
 
     <View
-        android:layout_width="match_parent"
+        android:background="@color/greyLightBackground"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/greyLightBackground"/>
-</LinearLayout>
+        android:layout_margin="5dp"
+        android:id="@+id/cell_order_container_separator"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cell_order_container_order_recycler_products"/>
+
+    <TextView
+        style="@style/textview_generic_title"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toBottomOf="@id/cell_order_container_separator"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:id="@+id/cell_order_container_order_total"/>
+
+</android.support.constraint.ConstraintLayout>
+
+</android.support.v7.widget.CardView>
